--- a/index.css
+++ b/index.css
@@ -1,6 +1,13 @@
 body {
     width: 100%;
     background-color: #f4f4f4;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+h1 {
+    font-size: 50px;
+    padding: 0;
+    margin: 0;
 }
 
 .main-container {
@@ -17,29 +24,53 @@ body {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    gap: 40px;
+    padding-top: 100px;
+    gap: 60px;
 }
 
 .recipe {
     width: 400px;
     height: 429px;
-    background-color: green;
     display: flex;
     overflow: hidden;
     flex-direction: column;
     align-items: end;
+    border-radius: 8px;
 
+}
+
+.zucchini {
+    background-color: #AD8C15;
+}
+
+.chicken {
+    background-color: #7A3315;
+}
+
+.gorgonzola {
+    background-color: #2B3D13;
 }
 
 .recipe-name {
     width: 100%;
     height: 100%;
     text-align: center;
+    color: #f4f4f4;
+    border-bottom: 2px solid rgba(255, 255, 255, 1);
 }
 
 .recipe img {
-    height: 367px;
     object-fit: contain;
+}
 
+.hover-scale-up {
+    transition: all .2s ease-in-out;
+}
 
+.hover-scale-up:hover {
+    transform: scale(1.1);
+}
+
+.recipe-list a {
+    color: transparent;
 }
